// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a default dropdown 1`] = `
<div
  className="dropdown dropdown-bottom dropdown-left"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "initialFocus": undefined,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <DropdownList
      onClickOutside={[Function]}
      requestClose={[Function]}
    >
      <Item
        label="1st Option"
        onSelect={[Function]}
      />
    </DropdownList>
  </FocusTrap>
</div>
`;

exports[`Dropdown renders a dropdown with a set width 1`] = `
<div
  className="dropdown dropdown-bottom dropdown-left"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "initialFocus": undefined,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <DropdownList
      onClickOutside={[Function]}
      requestClose={[Function]}
      width="470px"
    >
      <Item
        label="1st Option"
        onSelect={[Function]}
      />
    </DropdownList>
  </FocusTrap>
</div>
`;

exports[`Dropdown renders a dropdown with multiple children 1`] = `
<div
  className="dropdown dropdown-bottom dropdown-left"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "initialFocus": undefined,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <DropdownList
      onClickOutside={[Function]}
      requestClose={[Function]}
    >
      <Item
        label="1st Option"
        onSelect={[Function]}
      />
      <Item
        label="2nd Option"
        onSelect={[Function]}
      />
      <Item
        label="3rd Option"
        onSelect={[Function]}
      />
    </DropdownList>
  </FocusTrap>
</div>
`;

exports[`Dropdown renders an open dropdown 1`] = `
<div
  className="dropdown dropdown-bottom dropdown-left"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "initialFocus": undefined,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <DropdownList
      onClickOutside={[Function]}
      requestClose={[Function]}
    >
      <Item
        label="1st Option"
        onSelect={[Function]}
      />
    </DropdownList>
  </FocusTrap>
</div>
`;
